aiogcd (0.9.9)

  * Added get_as_tuple method to Path. (@egalpin, issue #7)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.8)

  * Added DatetimeValue property. (@jomido, issue #6)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.7)

  * Added service authentication. (@jomido, issue #1)
   - rename so that PyJWT doesn't bomb ('token' is module in stdlib)
   - service account token logic
   - add top-level names
   - add a service account connector
   - add dependencies to setup.py

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.6)

  * Fixed raising an IndexError when no id/name is given. (issue #2)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017

aiogcd (0.9.5)

  * Fixed setting the correct Kind for a model. (issue #3)

  * Fixed creating token file when a file is given without path. (issue #4)

 -- Jeroen van der Heijden <jeroen@transceptor.technology>  20 Jun 2017