@@ -1,3 +1,11 @@
+aiogcd (0.9.10)
+
+  * Use 'async with' for ensure_session. (@egalpin, issue #8)
+
+  * Replace 'yield' with 'await yield_()' in asyn function. (issue #9)
+
+ -- Jeroen van der Heijden <jeroen@transceptor.technology>  22 Jun 2017
+
 aiogcd (0.9.9)
 
   * Added get_as_tuple method to Path. (@egalpin, issue #7)
